--- a/05-07-23 JS ex1/index.html
+++ b/05-07-23 JS ex1/index.html
@@ -7,8 +7,13 @@
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <link rel='stylesheet' type='text/css' media='screen' href='style.css'>
 </head>
-<body>
+<body id="id-body">
+
+    <h2 id="altera-texto">Texto</h2>
+
+    <button onclick="funcao01()">Botão 1</button>
+    <button onclick="funcao02()">Botão 2</button>
     
-    <script src='main.js'></script>
+    <script src='index.js'></script>
 </body>
 </html>
