--- a/05-07-23 JS ex 2/index.html
+++ b/05-07-23 JS ex 2/index.html
@@ -3,20 +3,24 @@
 <head>
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
-    <title> 05/07/23 - Exercício JavaScript ex.01 </title>
+    <title>05/07/23 - Exercício JavaScript ex.02</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <link rel='stylesheet' type='text/css' media='screen' href='style.css'>
 </head>
-<body id="id-body">
+<body>
+    <h2>05/07/23 - Exercício JavaScript ex.02</h2>
+    <p>Feito com a tag table</p>
+    <table>
+        <tr>
+            <td>1</td>
+            <td>2</td>
+        </tr>
+        <tr>
+            <td>3</td>
+            <td>4</td>
+        </tr>
+    </table>
     
-    <h1>05/07/23 - Exercício JavaScript ex.01</h1>
-
-    <h2 id="altera-texto">Texto</h2>
-
-    <button onclick="funcao01()">Botão 1</button>
-    <button onclick="funcao02()">Botão 2</button>
-
     <script src='index.js'></script>
-
 </body>
 </html>
