--- a/10-07-23 JS ex 3/index.html
+++ b/10-07-23 JS ex 3/index.html
@@ -16,7 +16,9 @@
             <h2>A Pati é legal?</h2>
             <input class="caixa-de-texto" type="text" id="campo1" placeholder="digite sim ou não">
             <button onclick="botao()">Clique aqui</button>
-            <p id="recebe"></p>
+
+            <p class="resposta" id="recebe"></p>
+
         </section>
     </main>
     <script src='index.js'></script>
