--- a/05-07-23 funções 02/index.html
+++ b/05-07-23 funções 02/index.html
@@ -10,6 +10,7 @@
 <body id="id-body">
     
     <h1>05/07/23 - Exercício JavaScript ex.01</h1>
+    <h6>Uso de funções, alteração de estilo com a propriedade className</h6>
 
     <h2 id="altera-texto">Texto</h2>
 
