--- a/12-07-23/index.html
+++ b/12-07-23/index.html
@@ -1,15 +1,17 @@
 <!DOCTYPE html>
-<html>
+<html lang="pt-br">
 <head>
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
-    <title>Page Title</title>
+    <title>12/07/23 - Exercício JavaScript ex.01</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <link rel='stylesheet' type='text/css' media='screen' href='style.css'>
 </head>
 <body>
+    <h1>12/07/23 - Exercício JavaScript ex.01</h1>
+    <h6 class="subtitulo">while</h6>
 
-    <h1>Digite um valor:</h1>
+    <h3>Digite um valor:</h3>
     <input type="text" placeholder="número inteiro" id="campo1">
 
 
