--- a/12-07-23 while/index.html
+++ b/12-07-23 while/index.html
@@ -11,13 +11,13 @@
     <h1>12/07/23 - Exercício JavaScript ex.01</h1>
     <h6 class="subtitulo">while</h6>
 
-    <h3>Digite um valor:</h3>
+    <h3>Digite um valor maior que 1:</h3>
     <input type="text" placeholder="número inteiro" id="campo1">
 
 
-    <button class="botao" onclick="enquanto()">enquanto</button>
+    <button class="botao" onclick="enquanto()">Clique Aqui</button>
 
-    <p id="res-enquanto"></p>
+    <div clas="resultado" id="res-enquanto"></div>
 
     <script src='index.js'></script>
 </body>
