--- a/10-07-23 JS if else/index.html
+++ b/10-07-23 JS if else/index.html
@@ -11,9 +11,10 @@
     <main class="container">
         <section class="conteudo">
             <h1>10/07/23 - Exercício JavaScript ex.03</h1>
-            <p class="subtitulo">uso da função if/else</p>
+            <h2>Estrutura condicional: if/else</h2>
+            <p class="subtitulo">A condicional if é uma estrutura condicional que executa a afirmação, dentro do bloco, se determinada condição for verdadeira. Se for falsa, executa as afirmações dentro de else.</p>
 
-            <h2>A Pati é legal?</h2>
+            <h3>A Pati é legal?</h3>
             <input class="caixa-de-texto" type="text" id="campo1" placeholder="digite sim ou não">
             <button onclick="botao()">Clique aqui</button>
 
