--- a/10-07-23 calculadora 01/index.html
+++ b/10-07-23 calculadora 01/index.html
@@ -10,6 +10,7 @@
 <body>
     <main class="container">
         <h1>10/07/23 - Exercício JavaScript Calculadora 01</h1>
+        <h2>Utilização de estruturas condicionais if/else</h2>
         
         <section class="calculadora">
         <h3>Valor 1:</h3><input type="text" placeholder="número inteiro" id="campo1" required>
