--- a/12-07-23 while/index.html
+++ b/12-07-23 while/index.html
@@ -9,15 +9,17 @@
 </head>
 <body>
     <h1>12/07/23 - Exercício JavaScript ex.01</h1>
-    <h6 class="subtitulo">while</h6>
+    <h2>Laços de Repetição: while</h2>
+    <p>A repetição ocorre <b>enquanto</b> o resultado do teste (condição) for Verdadeiro.</p>
+    <p>A repetição é encerrada quando o teste for falso (F)</p>
 
     <h3>Digite um valor maior que 1:</h3>
     <input type="text" placeholder="número inteiro" id="campo1">
 
 
-    <button class="botao" onclick="enquanto()">Clique Aqui</button>
+    <button class="botao" onclick="enquanto()">while</button>
 
-    <div clas="resultado" id="res-enquanto"></div>
+    <div class="resultado" id="res-enquanto"></div>
 
     <script src='index.js'></script>
 </body>
