--- a/02-08-23 Grid Layout/index.html
+++ b/02-08-23 Grid Layout/index.html
@@ -10,29 +10,40 @@
 <body>
 
     <header class="cabecalho">
-        <div class="cabecalho-1">❤️</div>
-        <div class="titulo">Tropinha do JS</div>
+        <img src="gato-logo.jpg" alt="" class="coracao">
+        <div class="titulo">Gatos Fofinhos</div>
     </header>
 
     <section class="conteudo">
-        <div class="menu">🥰</div>
-        <div class="menu">🥰</div>
-        <div class="menu">🥰</div>
-        <div class="menu">🥰</div>
-        <div class="menu">🥰</div>
-        <div class="menu">🥰</div>
+        <div class="menu">Home</div>
+        <div class="menu">Endereço</div>
+        <div class="menu">Formulário</div>
+        <div class="menu">Portfólio</div>
+        <div class="menu">Trabalhos</div>
+        <div class="menu">Contato</div>
     </section>
 
     <section class="banner">
-        <div class="banner-imagem">
-            <img src="WhatsApp Image 2023-08-02 at 15.24.30.jpeg" alt="" height="400px">
+        <img src="gifs-do-gatinho-digitando-2.gif" alt="" height="auto" width="90%" class="gato-digitando">
+        <div class="texto-gato">
+            <h3>Os Fascinantes Gatos: Companheiros de Quatro Patas</h3>
+            <p>Os gatos, seres misteriosos e graciosos, há muito conquistam o coração dos seres humanos com seu charme cativante e comportamento intrigante. Presentes na história e mitologia de diversas culturas ao redor do mundo, esses felinos tornaram-se parte essencial do nosso convívio, tanto como animais de estimação quanto como figuras simbólicas.</p>
+            <p>Desde os tempos antigos, os gatos têm sido reverenciados por suas habilidades caçadoras e aguçados sentidos. Eles foram adorados como deuses no antigo Egito, associados a divindades como Bastet, a deusa protetora do lar e da fertilidade. Com seu olhar enigmático, tornaram-se símbolos de mistério e sabedoria em várias tradições.</p>
         </div>
     </section>
 
-    <footer>
-        <div class="container">10</div>
-        <div class="container">11</div>
-        <div class="container">12</div>
+    <footer class="rodape">
+        <div class="container">
+            <b>Nome da Empresa:</b> Techville Tech Solutions <br>
+            <b>Endereço:</b> Rua das Inovações, 123 <br>
+            <b>Bairro:</b> Bairro Tecnológico <br>
+            <b>Cidade:</b> Cidade Futura <br>
+            <b>Estado:</b> Estado da Tecnologia <br>
+            <b>CEP:</b> 12345-678 <br>
+            <b>País:</b> Imaginolândia <br>
+        </div>
+    <div class="img-gato"><img src="gato.jpg" width="100%" height="300px" alt=""></div>
+        <div class="mapouter"><div class="gmap_canvas"><iframe width="100%" height="300px" id="gmap_canvas" src="https://maps.google.com/maps?q=senai+anchieta&t=&z=13&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe></div></div>
     </footer>
     
     <script src='index.js'></script>
