--- a/estudos - grid/grid1.html
+++ b/estudos - grid/grid1.html
@@ -17,7 +17,6 @@ body {
   position: absolute;
   left: 176px;
   top: 98px;
-  bottom: 300px;
   border-radius: 10px;
   background: #C4C4C433;
   padding: 1rem;
@@ -35,12 +34,15 @@ h1 {
   line-height: 33px;
   letter-spacing: 0em;
   text-align: center;
+  align-items: center;
   color: white;
 }
 
 .grid-container {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
+  grid-template-rows: auto auto auto;
+  gap: 3%;
 }
 
 .grid-item {
@@ -57,11 +59,31 @@ h1 {
   padding: 0.5rem;
 }
 
+/* .item1 {
+  grid-area: 1 / 1 / 2 / 2 ;
+}
+
+.item2 {
+  grid-area: 1 / 2 / 2 / 3;
+} */
+
 .item3 {
   background: #84EEC1;
   color: #041833;
+  grid-area: 1 / 3 / 3 / 4 ;
 }
 
+.item4 {
+  grid-area: 2 / 1 / 3 / 3;
+}
+
+.item5 {
+  grid-area: 3 / 1 / 4 / 3;
+}
+
+/* .item6 {
+  grid-area: 3 / 3 / 4 / 4;
+} */
 
 
     </style>
